--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
 		"@svgr/webpack": "^8.0.1",
 		"@types/circular-dependency-plugin": "^5.0.5",
+		"@types/md5": "^2.3.5",
 		"@types/node": "^18.16.3",
 		"@types/react": "^18.2.5",
 		"@types/react-dom": "^18.2.3",
@@ -70,6 +71,7 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.5",
+		"md5": "^2.3.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
