--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,6 @@
   status = 200
 
 [[redirects]]
-  from = "http://api.valantis.store:40000/*"
-  to = "https://api.valantis.store:40000/"
+  from = "/http://api.valantis.store:40000/*"
+  to = "/https://api.valantis.store:40000/"
   status = 200
