--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "webpack serve --env port=3000 apiURL=http://api.valantis.store:40000/",
-		"build:prod": "webpack --env mode=production apiURL=http://api.valantis.store:40000/",
-		"build:dev": "webpack --env mode=development apiURL=http://api.valantis.store:40000/",
-		"build:prod:analyze": "npm run build:prod --env analyze=true apiURL=http://api.valantis.store:40000/",
-		"build:dev:analyze": "npm run build:dev --env analyze=true apiURL=http://api.valantis.store:40000/",
+		"start": "webpack serve --env port=3000 apiURL=https://api.valantis.store:40000/",
+		"build:prod": "webpack --env mode=production apiURL=https://api.valantis.store:40000/",
+		"build:dev": "webpack --env mode=development apiURL=https://api.valantis.store:40000/",
+		"build:prod:analyze": "npm run build:prod --env analyze=true apiURL=https://api.valantis.store:40000/",
+		"build:dev:analyze": "npm run build:dev --env analyze=true apiURL=https://api.valantis.store:40000/",
 		"lint:ts": "eslint \"**/*.{ts,tsx}\"",
 		"lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
 		"lint:style": "stylelint \"**/*.{css,scss}\"",
