--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
+	"homepage": "https://iusmanov.github.io/valantis",
 	"scripts": {
-		"start": "webpack serve --env port=3000 apiURL=https://api.valantis.store:40000/",
-		"build:prod": "webpack --env mode=production apiURL=https://api.valantis.store:40000/",
-		"build:dev": "webpack --env mode=development apiURL=https://api.valantis.store:40000/",
-		"build:prod:analyze": "npm run build:prod --env analyze=true apiURL=https://api.valantis.store:40000/",
-		"build:dev:analyze": "npm run build:dev --env analyze=true apiURL=https://api.valantis.store:40000/",
+		"predeploy": "npm run build:prod",
+		"deploy": "gh-pages -d build",
+		"start": "webpack serve --env port=3000 apiURL=http://api.valantis.store:40000/",
+		"build:prod": "webpack --env mode=production apiURL=http://api.valantis.store:40000/",
+		"build:dev": "webpack --env mode=development apiURL=http://api.valantis.store:40000/",
+		"build:prod:analyze": "npm run build:prod --env analyze=true apiURL=http://api.valantis.store:40000/",
+		"build:dev:analyze": "npm run build:dev --env analyze=true apiURL=http://api.valantis.store:40000/",
 		"lint:ts": "eslint \"**/*.{ts,tsx}\"",
 		"lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
 		"lint:style": "stylelint \"**/*.{css,scss}\"",
@@ -48,6 +51,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-unused-imports": "^3.0.0",
 		"fork-ts-checker-webpack-plugin": "^8.0.0",
+		"gh-pages": "^6.1.1",
 		"html-webpack-plugin": "^5.5.1",
 		"mini-css-extract-plugin": "^2.7.5",
 		"postcss-lit": "^1.1.0",
