--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
-	"homepage": "https://iusmanov.github.io/react-gh-pages",
+	"homepage": "https://iusmanov.github.io/valantis",
 	"scripts": {
 		"predeploy": "npm run build:prod",
 		"deploy": "gh-pages -d build",
