--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
 	"scripts": {
 		"predeploy": "npm run build:prod",
 		"deploy": "gh-pages -d build",
-		"start": "webpack serve --env port=3000 apiURL=http://api.valantis.store:40000/",
-		"build:prod": "webpack --env mode=production apiURL=http://api.valantis.store:40000/",
-		"build:dev": "webpack --env mode=development apiURL=http://api.valantis.store:40000/",
-		"build:prod:analyze": "npm run build:prod --env analyze=true apiURL=http://api.valantis.store:40000/",
-		"build:dev:analyze": "npm run build:dev --env analyze=true apiURL=http://api.valantis.store:40000/",
+		"start": "webpack serve --env port=3000 apiURL=https://api.valantis.store:41000/",
+		"build:prod": "webpack --env mode=production apiURL=https://api.valantis.store:41000/",
+		"build:dev": "webpack --env mode=development apiURL=https://api.valantis.store:41000/",
+		"build:prod:analyze": "npm run build:prod --env analyze=true apiURL=https://api.valantis.store:41000/",
+		"build:dev:analyze": "npm run build:dev --env analyze=true apiURL=https://api.valantis.store:41000/",
 		"lint:ts": "eslint \"**/*.{ts,tsx}\"",
 		"lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
 		"lint:style": "stylelint \"**/*.{css,scss}\"",
